test/custom/elaboration/good/coreml_polymorphic_int.mle
let ['a] (x : int) = ['a] 0
