test/custom/elaboration/bad/typeclass_method_and_variable2.mle
class K 'a { k : 'a }
instance K int { k = let x : int = 0 in x[] }
class Y 'a { x : 'a }
